--- a/ui/src/css/_wrapper.scss
+++ b/ui/src/css/_wrapper.scss
@@ -30,7 +30,7 @@
   right: 16px;
   bottom: 0;
   z-index: 3;
-  opacity: .8;
+  opacity: .9;
   transition: opacity .2s ease;
   &:hover {
     opacity: 1;
